corrected the alignments for phone screen size

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -42,7 +42,8 @@
 
 .img1-home {
     height: 90%;
-    margin-left: 80px;
+    display: flex;
+    justify-content: center;
     animation: scaleFadeIn 1s ease-in-out, scrollAnimation 10s linear infinite;
 }
 
@@ -60,8 +61,8 @@
 
 @media(max-width:991px) {
     .img1-home {
-        margin-left: 30px !important;
-        margin-top: 30px !important;
+    display: flex;
+    justify-content: center;
     }
 }
 
@@ -74,8 +75,9 @@
 @media(max-width:576px) {
     .img1-home {
         transform: scale(0.7);
-        margin-top: 20px !important;
-        margin-left: -50px !important;
+        margin-right: 25px !important;
+        margin-top: 0px !important;
+
     }
 
     @keyframes scaleFadeIn {
@@ -169,13 +171,20 @@ p {
         color: #fff;
         font-weight: bold;
         text-decoration: none;
-        font-size: 15px;
+        font-size: 16px;
     }
 }
 
 @media(max-width:576px) {
     .stack-btn {
         transform: scale(1) !important;
-        margin-bottom: 20px;
+        margin-bottom: 20px !important;
+        margin-right: 20px !important;
+
+    }
+}
+@media(max-width:576px){
+    .intro-des{
+        margin-top: -105px !important;
     }
 }
